--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Building Clean Archiceture and  with SOLID principles - Node | Type",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "ts-node src/main.ts"
   },
   "repository": {
     "type": "git",
