add prisma and sqlite

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/osmirpedro99/itask-node#readme",
   "dependencies": {
+    "@prisma/client": "^7.0.0",
     "dotenv": "^17.2.3",
     "express": "^5.1.0"
   },
@@ -28,6 +29,7 @@
     "@types/jest": "^30.0.0",
     "@types/node": "^24.10.1",
     "jest": "^30.2.0",
+    "prisma": "^7.1.0-dev.10",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
   }
